ingress/kubeapps/grafana/grafana-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /   #new 
  name: grafana
  namespace: monitor
spec:
#   tls:
#   - hosts:
#     - lope.test
#     secretName: lope-tls-secret
  rules:
  - host: grafana.lope.test
    http:
      paths:
      - path: /
        backend:
          serviceName: oafish-snow-grafana
          servicePort: 3000
